--- a/worldwise/src/components/Button.module.css
+++ b/worldwise/src/components/Button.module.css
@@ -19,5 +19,17 @@
     background: none;
     border: 1px solid currentColor;
 }
+.position {
+    font-weight: 700;
+    position: absolute;
+    left: 50%;
+    bottom: 4rem;
+    transform: translateX(-50%);
+    z-index: 1000;
+    font-size: 1.4rem;
+    background-color: var(--color-brand--2);
+    color: var(--color-dark--1);
+    box-shadow: 0 0.4rem 1.2rem rgba(36, 42, 46, 0.16);
+}
 
 
