--- a/worldwise/src/components/CountryList.module.css
+++ b/worldwise/src/components/CountryList.module.css
@@ -5,7 +5,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
 
-    display: flex;
+    display: grid;
     grid-template-columns: 1fr 1fr;
     align-content: start;
     gap: 1.6rem;
